chore: 🤖 script for type lint

--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint ."
+    "lint:js": "eslint .",
+    "lint:types": "tsc",
+    "lint": "npm run lint:types && npm run lint:js"
   },
   "eslintConfig": {
     "extends": [
