--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint:js": "eslint .",
     "lint:types": "tsc",
-    "lint": "npm run lint:types && npm run lint:js"
+    "lint": "npm run lint:types && npm run lint:js",
+    "start": "react-scripts start",
+    "test": "react-scripts test"
   },
   "eslintConfig": {
     "extends": [
