--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "17.0.13",
     "eslint": "7.30.0",
     "eslint-config-next": "11.0.1",
+    "git-cz": "^4.7.6",
     "typescript": "4.3.5"
   }
 }
