--- a/package.json
+++ b/package.json
@@ -14,10 +14,16 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@ginpei/eslintrc": "^1.1.0",
     "@types/react": "17.0.13",
-    "eslint": "7.30.0",
+    "@typescript-eslint/eslint-plugin": "^4.28.1",
+    "eslint": "^7.30.0",
     "eslint-config-next": "11.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-prettier": "^3.4.0",
     "git-cz": "^4.7.6",
+    "prettier": "^2.3.2",
     "typescript": "4.3.5"
   }
 }
