--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sass": "^1.35.1",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "zod": "^3.5.1"
   },
   "devDependencies": {
     "@ginpei/eslintrc": "^1.1.0",
