--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@types/styled-components": "^5.1.11",
@@ -18,15 +19,21 @@
     "zod": "^3.5.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-typescript": "^7.14.5",
     "@ginpei/eslintrc": "^1.1.0",
+    "@types/jest": "^26.0.24",
     "@types/react": "17.0.13",
     "@typescript-eslint/eslint-plugin": "^4.28.1",
+    "babel-jest": "^27.0.6",
     "eslint": "^7.30.0",
     "eslint-config-next": "11.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-prettier": "^3.4.0",
     "git-cz": "^4.7.6",
+    "jest": "^27.0.6",
     "prettier": "^2.3.2",
     "typescript": "4.3.5"
   }
