--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "git-cz": "^4.7.6",
     "jest": "^27.0.6",
     "prettier": "^2.3.2",
+    "ts-jest": "^27.0.3",
     "typescript": "4.3.5"
   }
 }
