--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@headlessui/react": "^1.3.0",
     "@types/styled-components": "^5.1.11",
     "next": "11.0.1",
     "react": "17.0.2",
